@@ -1,3 +1,9 @@
+2005-04-02  Andrew John Hughes  <gnu_andrew@member.fsf.org>
+
+	* java/lang/StringBuilder.java:
+	Change references to System.arraycopy to
+	VMSystem.arraycopy.
+	
 2005-03-28  Sven de Marothy  <sven@physto.se>
 
 	* gnu/java/io/decode/DecoderUnicodeBig.java,
